# Ray-tracing

./: CMakeLists.txt  README.md
src/: main.cpp
src/geometry/: geometry.h  intersection.cpp  intersection.h  ray.cpp  ray.h  ray_transform.cpp  ray_transform.h
src/geometry/mesh/: mesh.cpp  mesh.h
src/geometry/primitive/: sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/rt/: eye_ray_generator.cpp  eye_ray_generator.h  frame_buffer.cpp  frame_buffer.h  intersection.cpp  intersection.h  ray.cpp  ray.h  render.cpp  render.h
src/rt/frame/: fragment.h  frame_buffer.cpp  frame_buffer.h
src/rt/ray-trace-task/: air_ray_trace_task.h  base_ray_trace_task.h  shadow_ray_trace_task.h
src/rt/ray-tracer/: frame_renderer.cpp  frame_renderer.h  ray_tracer.h  render_worker.cpp  render_worker.h
src/rt/ray-tracer/ray-trace-task/: air_ray_trace_task.cpp  air_ray_trace_task.h  base_ray_trace_task.cpp  base_ray_trace_task.h  ray_trace_task.h  shadow_ray_trace_task.cpp  shadow_ray_trace_task.h
src/rt/ray-tracer/util/: eye_ray_generator.cpp  eye_ray_generator.h  eye_ray_trace_task_factory.cpp  eye_ray_trace_task_factory.h  finished_fragment_counter.cpp  finished_fragment_counter.h  fragment_render_task.cpp  fragment_render_task.h
src/scene/: intersection_target.h  scene.cpp  scene.h
src/scene/camera/: camera.cpp  camera.h  ray.h
src/scene/light/: illuminance.cpp  illuminance.h  light.cpp  light.h  light_source.cpp  light_source.h
src/scene/light/light-source/: point_light_source.cpp  point_light_source.h
src/scene/object/: object.cpp  object.h
src/scene/object/material/: BRD_function.h  material.h
src/scene/object/material/pbr/: pbr_material.cpp  pbr_material.h  pbr_solid_material.h  solid_material.h
src/scene/object/material/phong/: phong_shading_material.cpp  phong_shading_material.h  phong_solid_material.h
src/scene/object/mesh/: mesh.cpp  mesh.h
src/scene/object/mesh/primitives/: triangle.h
src/scene/object/mesh/util/: intersection.h
src/util/: color.cpp  color.h  enumeration.h  matrix.h  transform.cpp  transform.h  vector.h
